--- a/up.yaml
+++ b/up.yaml
@@ -24,13 +24,21 @@
     - reboot-if-required
 - gather_facts: no
   hosts:
-    - k3s_server
+    - k3s_node
   roles:
     - k3s-node-up
+- gather_facts: no
+  hosts:
+    - k3s_server
+  roles:
     - k3s-server-up
+- gather_facts: no
+  hosts:
+    - k3s_server
+  roles:
+    - k3s-post-server-up
 - gather_facts: no
   hosts:
     - k3s_agent
   roles:
-    - k3s-node-up
     - k3s-agent-up
