--- a/roles/k3s-agent-up/defaults/main.yaml
+++ b/roles/k3s-agent-up/defaults/main.yaml
@@ -1,7 +1,9 @@
 ---
 ansible_become: yes
 # Where to store build files for K3s?
-k3s_build_dir: build
+k3s_build_dir: '{{ playbook_dir }}/build/k3s'
+# Should be set by querying the cluster
+k3s_installed_version: ""
 # https://github.com/rancher/k3s/releases :
 k3s_version: v1.27.1+k3s1
-proxy_url: null
+proxy_url: ""
