--- a/roles/k3s-node-up/defaults/main.yaml
+++ b/roles/k3s-node-up/defaults/main.yaml
@@ -8,3 +8,4 @@ k3s_config: { }
 # Content template for /etc/rancher/k3s/registries.yaml - see
 # https://rancher.com/docs/k3s/latest/en/installation/private-registry/ :
 k3s_registries: { }
+proxy_url: ""
