Improve web proxy configuration.

--- a/roles/debian-up/defaults/main.yaml
+++ b/roles/debian-up/defaults/main.yaml
@@ -1,6 +1,6 @@
 ---
 ansible_become: yes
 locale: en_US.UTF-8
-no_proxy: 127.0.0.1,.local,localhost
+no_proxy: 127.0.0.1/8,.local,localhost
 proxy_url: ""
 timezone: Etc/UTC
