--- a/inventory.yaml
+++ b/inventory.yaml
@@ -56,7 +56,7 @@ all:
     ## https://github.com/rancher/k3s/releases :
     #k3s_version: v1.27.1+k3s1
     #locale: en_US.UTF-8
-    #no_proxy: 127.0.0.1,.local,localhost
+    #no_proxy: 127.0.0.1/8,.local,localhost
     #proxy_url: http://10.0.0.1:3128/
     #rpi_update: yes
     #timezone: Etc/UTC
