--- a/roles/k3s-agent-up/tasks/main.yaml
+++ b/roles/k3s-agent-up/tasks/main.yaml
@@ -1,14 +1,14 @@
 ---
 - name: Install K3s agent
   environment:
-    HTTP_PROXY: '{{ proxy_url | default(omit, true) }}'
-    HTTPS_PROXY: '{{ proxy_url | default(omit, true) }}'
+    HTTP_PROXY: '{{ proxy_url }}'
+    HTTPS_PROXY: '{{ proxy_url }}'
     INSTALL_K3S_VERSION: '{{ k3s_version }}'
     K3S_TOKEN: '{{ lookup("file", k3s_build_dir + "/server-token") }}'
-    NO_PROXY: '{{ no_proxy | default(omit, true) }}'
-    http_proxy: '{{ proxy_url | default(omit, true) }}'
-    https_proxy: '{{ proxy_url | default(omit, true) }}'
-    no_proxy: '{{ no_proxy | default(omit, true) }}'
+    NO_PROXY: '{{ no_proxy }}'
+    http_proxy: '{{ proxy_url }}'
+    https_proxy: '{{ proxy_url }}'
+    no_proxy: '{{ no_proxy }}'
   notify: Require reboot
   shell:
     cmd: |-
