--- a/roles/k3s-server-up/tasks/main.yaml
+++ b/roles/k3s-server-up/tasks/main.yaml
@@ -45,10 +45,10 @@
           when: k3s_installed_version != k3s_version
       when: inventory_hostname != groups.k3s_server[0]
   environment:
-    HTTP_PROXY: '{{ proxy_url | default(omit, true) }}'
-    HTTPS_PROXY: '{{ proxy_url | default(omit, true) }}'
+    HTTP_PROXY: '{{ proxy_url }}'
+    HTTPS_PROXY: '{{ proxy_url }}'
     INSTALL_K3S_VERSION: '{{ k3s_version }}'
-    NO_PROXY: '{{ no_proxy | default(omit, true) }}'
-    http_proxy: '{{ proxy_url | default(omit, true) }}'
-    https_proxy: '{{ proxy_url | default(omit, true) }}'
-    no_proxy: '{{ no_proxy | default(omit, true) }}'
+    NO_PROXY: '{{ no_proxy }}'
+    http_proxy: '{{ proxy_url }}'
+    https_proxy: '{{ proxy_url }}'
+    no_proxy: '{{ no_proxy }}'
