--- a/roles/k3s-agent-up/defaults/main.yaml
+++ b/roles/k3s-agent-up/defaults/main.yaml
@@ -6,4 +6,5 @@ k3s_build_dir: '{{ playbook_dir }}/build/k3s'
 k3s_installed_version: ""
 # https://github.com/rancher/k3s/releases :
 k3s_version: v1.27.3+k3s1
+no_proxy: ""
 proxy_url: ""
