--- a/roles/k3s-node-down/defaults/main.yaml
+++ b/roles/k3s-node-down/defaults/main.yaml
@@ -4,4 +4,5 @@ ansible_become: yes
 k3s_build_dir: '{{ playbook_dir }}/build/k3s'
 # Do you want to delete all data from emptydir volumes upon teardown?
 k3s_delete_emptydir_data: no
+no_proxy: ""
 proxy_url: ""
